--- a/LearningNotes/LearningNotes.csproj
+++ b/LearningNotes/LearningNotes.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Json\JsonLearn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Json\JobEnum.cs" />
+    <Compile Include="GenUtils\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
