--- a/WebProj/WebProj.csproj
+++ b/WebProj/WebProj.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\WebProjContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
