--- a/LearningNotes/LearningNotes.csproj
+++ b/LearningNotes/LearningNotes.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Json\JsonLearn.cs" />
+    <Compile Include="leetcode\2Sum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Json\JobEnum.cs" />
