leetcode tree traversal

--- a/LearningNotes/LearningNotes.csproj
+++ b/LearningNotes/LearningNotes.csproj
@@ -51,15 +51,18 @@
     <Compile Include="leetcode\HouseRobber.cs" />
     <Compile Include="leetcode\ListProblem\ListAddTwoNumber2.cs" />
     <Compile Include="leetcode\ListProblem\ListAddTwoNumbers.cs" />
+    <Compile Include="leetcode\Tree\Traversal\PostOrderTraversal.cs" />
     <Compile Include="leetcode\MatrixCellDistanceOrder.cs" />
     <Compile Include="leetcode\MaxSumTwoArray.cs" />
     <Compile Include="leetcode\StreamChecker.cs" />
+    <Compile Include="leetcode\Tree\Traversal\InOrderTraversal.cs" />
     <Compile Include="leetcode\Tree\LevelOrder\LargestValueTreeRow.cs" />
     <Compile Include="leetcode\LongestArithSeqLength.cs" />
     <Compile Include="leetcode\MaxAncestorDiff.cs" />
     <Compile Include="leetcode\ReCoverFromPreorder.cs" />
     <Compile Include="leetcode\ReverseString.cs" />
     <Compile Include="leetcode\Tree\LevelOrder\TreeRightSideView.cs" />
+    <Compile Include="leetcode\Tree\Traversal\PreOrderTraversal.cs" />
     <Compile Include="leetcode\TwoCitySchedule.cs" />
     <Compile Include="leetcode\Utils\DictExtension.cs" />
     <Compile Include="leetcode\Utils\ListNode.cs" />
