--- a/LearningNotes/LearningNotes.csproj
+++ b/LearningNotes/LearningNotes.csproj
@@ -52,6 +52,8 @@
     <Compile Include="leetcode\ListProblem\ListAddTwoNumber2.cs" />
     <Compile Include="leetcode\ListProblem\ListAddTwoNumbers.cs" />
     <Compile Include="leetcode\Tree\BSTSearch\UniqueBSTSearch.cs" />
+    <Compile Include="leetcode\Tree\BSTSearch\UniqueSearchTwo.cs" />
+    <Compile Include="leetcode\Tree\RecoverBST.cs" />
     <Compile Include="leetcode\Tree\Traversal\PostOrderTraversal.cs" />
     <Compile Include="leetcode\MatrixCellDistanceOrder.cs" />
     <Compile Include="leetcode\MaxSumTwoArray.cs" />
