--- a/LearningNotes/LearningNotes.csproj
+++ b/LearningNotes/LearningNotes.csproj
@@ -51,6 +51,8 @@
     <Compile Include="leetcode\Array\LCS\MaxLenRepeatedArray.cs" />
     <Compile Include="leetcode\Array\LIS\LongestIncreasingSubSequence.cs" />
     <Compile Include="leetcode\Array\LIS\NumOfLIS.cs" />
+    <Compile Include="leetcode\Array\LongestPalindromicSubsequence.cs" />
+    <Compile Include="leetcode\Array\LongestPalindromSubstring.cs" />
     <Compile Include="leetcode\Array\SubArrSumEqualK.cs" />
     <Compile Include="leetcode\MoveStoneUtilConsecutive.cs" />
     <Compile Include="leetcode\ColoringBorder.cs" />
